--- a/src/core/styles/components/input/_input-group-theme.scss
+++ b/src/core/styles/components/input/_input-group-theme.scss
@@ -190,7 +190,9 @@
 
         success-secondary-color: $success-secondary-color,
         warning-secondary-color: $warning-secondary-color,
-        error-secondary-color: $error-secondary-color
+        error-secondary-color: $error-secondary-color,
+
+        variant: $variant
     ));
 }
 
