--- a/src/core/styles/components/slider/_slider-theme.scss
+++ b/src/core/styles/components/slider/_slider-theme.scss
@@ -78,7 +78,8 @@
         track-color: $track-color,
         thumb-color: $thumb-color,
         label-background-color: $label-background-color,
-        label-text-color: $label-text-color
+        label-text-color: $label-text-color,
+        variant: $variant
     ));
 }
 
